--- a/Fide/Fide.Blazor/Components/Pages/Home.razor
+++ b/Fide/Fide.Blazor/Components/Pages/Home.razor
@@ -1,7 +1,17 @@
 ﻿@page "/"
 
-<PageTitle>Home</PageTitle>
+<PageTitle>Главная</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Привет!</h1>
 
-Welcome to your new app.
+<AuthorizeView>
+    <Authorized>
+       @context.User.Identity?.Name!, как у Вас дела сегодня?
+    </Authorized>
+    <NotAuthorized>
+        Чтобы получить доступ к функционалу 
+        <a href="/Account/Login">авторизуйтесь</a>
+        или 
+        <a href="/Account/Register">зарегистрируйтесь</a>.
+    </NotAuthorized>
+</AuthorizeView>
