Частичная локализация страниц. Перемещение классов в другой namespace.

--- a/Fide/Fide.Blazor/Components/Account/Pages/ForgotPassword.razor
+++ b/Fide/Fide.Blazor/Components/Account/Pages/ForgotPassword.razor
@@ -6,16 +6,17 @@
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
 @using Fide.Blazor.Data
+@using Fide.Blazor.Services
 
 @inject UserManager<ApplicationUser> UserManager
 @inject IEmailSender<ApplicationUser> EmailSender
 @inject NavigationManager NavigationManager
 @inject IdentityRedirectManager RedirectManager
 
-<PageTitle>Forgot your password?</PageTitle>
+<PageTitle>Забыли пароль?</PageTitle>
 
-<h1>Forgot your password?</h1>
-<h2>Enter your email.</h2>
+<h1>Забыли пароль?</h1>
+<h2>Введите почту</h2>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -25,10 +26,10 @@
 
             <div class="form-floating mb-3">
                 <InputText @bind-Value="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
-                <label for="email" class="form-label">Email</label>
+                <label for="email" class="form-label">Почта</label>
                 <ValidationMessage For="() => Input.Email" class="text-danger" />
             </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Reset password</button>
+            <button type="submit" class="w-100 btn btn-lg btn-primary">Сбросить пароль</button>
         </EditForm>
      </div>
 </div>
