--- a/Fide/Fide.Blazor/Components/Account/Pages/ExternalLogin.razor
+++ b/Fide/Fide.Blazor/Components/Account/Pages/ExternalLogin.razor
@@ -7,6 +7,7 @@
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
 @using Fide.Blazor.Data
+@using Fide.Blazor.Services
 
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
