--- a/Fide/Fide.Blazor/Components/Account/Pages/LoginWithRecoveryCode.razor
+++ b/Fide/Fide.Blazor/Components/Account/Pages/LoginWithRecoveryCode.razor
@@ -3,6 +3,7 @@
 @using System.ComponentModel.DataAnnotations
 @using Microsoft.AspNetCore.Identity
 @using Fide.Blazor.Data
+@using Fide.Blazor.Services
 
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
