--- a/Fide/Fide.Blazor/Components/Account/Pages/RegisterConfirmation.razor
+++ b/Fide/Fide.Blazor/Components/Account/Pages/RegisterConfirmation.razor
@@ -4,6 +4,7 @@
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
 @using Fide.Blazor.Data
+@using Fide.Blazor.Services
 
 @inject UserManager<ApplicationUser> UserManager
 @inject IEmailSender<ApplicationUser> EmailSender
