--- a/Fide/Fide.Blazor/Components/Account/Pages/ResendEmailConfirmation.razor
+++ b/Fide/Fide.Blazor/Components/Account/Pages/ResendEmailConfirmation.razor
@@ -6,6 +6,7 @@
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
 @using Fide.Blazor.Data
+@using Fide.Blazor.Services
 
 @inject UserManager<ApplicationUser> UserManager
 @inject IEmailSender<ApplicationUser> EmailSender
