--- a/Fide/Fide.Blazor/Components/Account/Pages/ResetPassword.razor
+++ b/Fide/Fide.Blazor/Components/Account/Pages/ResetPassword.razor
@@ -5,6 +5,7 @@
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
 @using Fide.Blazor.Data
+@using Fide.Blazor.Services
 
 @inject IdentityRedirectManager RedirectManager
 @inject UserManager<ApplicationUser> UserManager
