--- a/Fide/Fide.Blazor/Components/Pages/Home.razor
+++ b/Fide/Fide.Blazor/Components/Pages/Home.razor
@@ -6,7 +6,7 @@
 
 <AuthorizeView>
     <Authorized>
-       @context.User.Identity?.Name!, как у Вас дела сегодня?
+        Вы авторизованы как @context.User.Identity?.Name
     </Authorized>
     <NotAuthorized>
         Чтобы получить доступ к функционалу 
