--- a/Fide/Fide.Blazor/Components/Account/Pages/Manage/ChangePassword.razor
+++ b/Fide/Fide.Blazor/Components/Account/Pages/Manage/ChangePassword.razor
@@ -1,8 +1,9 @@
 ﻿@page "/Account/Manage/ChangePassword"
 
-@    using System.ComponentModel.DataAnnotations
-@    using Microsoft.AspNetCore.Identity
-@    using Fide.Blazor.Data
+@using System.ComponentModel.DataAnnotations
+@using Microsoft.AspNetCore.Identity
+@using Fide.Blazor.Data
+@using Fide.Blazor.Services
 
 @inject UserManager<ApplicationUser> UserManager
 @inject SignInManager<ApplicationUser> SignInManager
@@ -10,9 +11,9 @@
 @inject IdentityRedirectManager RedirectManager
 @inject ILogger<ChangePassword> Logger
 
-<PageTitle>Change password</PageTitle>
+<PageTitle>Смена пароля</PageTitle>
 
-<h3>Change password</h3>
+<h3>Смена пароля</h3>
 <StatusMessage Message="@message" />
 <div class="row">
     <div class="col-md-6">
@@ -20,21 +21,21 @@
             <DataAnnotationsValidator />
             <ValidationSummary class="text-danger" role="alert" />
             <div class="form-floating mb-3">
-                <InputText type="password" @bind-Value="Input.OldPassword" class="form-control" autocomplete="current-password" aria-required="true" placeholder="Please enter your old password." />
-                <label for="old-password" class="form-label">Old password</label>
+                <InputText type="password" @bind-Value="Input.OldPassword" class="form-control" autocomplete="current-password" aria-required="true" />
+                <label for="old-password" class="form-label">Старый пароль</label>
                 <ValidationMessage For="() => Input.OldPassword" class="text-danger" />
             </div>
             <div class="form-floating mb-3">
-                <InputText type="password" @bind-Value="Input.NewPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="Please enter your new password." />
-                <label for="new-password" class="form-label">New password</label>
+                <InputText type="password" @bind-Value="Input.NewPassword" class="form-control" autocomplete="new-password" aria-required="true" />
+                <label for="new-password" class="form-label">Новый пароль</label>
                 <ValidationMessage For="() => Input.NewPassword" class="text-danger" />
             </div>
             <div class="form-floating mb-3">
-                <InputText type="password" @bind-Value="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="Please confirm your new password." />
-                <label for="confirm-password" class="form-label">Confirm password</label>
+                <InputText type="password" @bind-Value="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" />
+                <label for="confirm-password" class="form-label">Подтверждение пароля</label>
                 <ValidationMessage For="() => Input.ConfirmPassword" class="text-danger" />
             </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Update password</button>
+            <button type="submit" class="w-100 btn btn-lg btn-primary">Сменить пароль</button>
         </EditForm>
     </div>
 </div>
@@ -70,9 +71,9 @@
         }
 
         await SignInManager.RefreshSignInAsync(user);
-        Logger.LogInformation("User changed their password successfully.");
+        Logger.LogInformation("Пароль изменен успешно");
 
-        RedirectManager.RedirectToCurrentPageWithStatus("Your password has been changed", HttpContext);
+        RedirectManager.RedirectToCurrentPageWithStatus("Пароль изменен успешно", HttpContext);
     }
 
     private sealed class InputModel
@@ -83,14 +84,14 @@
         public string OldPassword { get; set; } = "";
 
         [Required]
-        [StringLength(100, ErrorMessage = "The {0} must be at least {2} and at max {1} characters long.", MinimumLength = 6)]
+        [StringLength(100, ErrorMessage = "{0} должен содержать не менее {2} и не более {1} символов", MinimumLength = 6)]
         [DataType(DataType.Password)]
         [Display(Name = "New password")]
         public string NewPassword { get; set; } = "";
 
         [DataType(DataType.Password)]
         [Display(Name = "Confirm new password")]
-        [Compare("NewPassword", ErrorMessage = "The new password and confirmation password do not match.")]
+        [Compare("NewPassword", ErrorMessage = "Новый пароль и подтверждение не совпадают")]
         public string ConfirmPassword { get; set; } = "";
     }
 }
