--- a/Fide/Fide.Blazor/Components/Account/Pages/Manage/Index.razor
+++ b/Fide/Fide.Blazor/Components/Account/Pages/Manage/Index.razor
@@ -1,17 +1,18 @@
 ﻿@page "/Account/Manage"
 
-@    using System.ComponentModel.DataAnnotations
-@    using Microsoft.AspNetCore.Identity
-@    using Fide.Blazor.Data
+@using System.ComponentModel.DataAnnotations
+@using Microsoft.AspNetCore.Identity
+@using Fide.Blazor.Data
+@using Fide.Blazor.Services
 
 @inject UserManager<ApplicationUser> UserManager
 @inject SignInManager<ApplicationUser> SignInManager
 @inject IdentityUserAccessor UserAccessor
 @inject IdentityRedirectManager RedirectManager
 
-<PageTitle>Profile</PageTitle>
+<PageTitle>Профиль</PageTitle>
 
-<h3>Profile</h3>
+<h3>Профиль</h3>
 <StatusMessage />
 
 <div class="row">
@@ -20,15 +21,10 @@
             <DataAnnotationsValidator />
             <ValidationSummary class="text-danger" role="alert" />
             <div class="form-floating mb-3">
-                <input type="text" value="@username" class="form-control" placeholder="Please choose your username." disabled />
+                <input type="text" value="@username" class="form-control" disabled />
                 <label for="username" class="form-label">Username</label>
             </div>
-            <div class="form-floating mb-3">
-                <InputText @bind-Value="Input.PhoneNumber" class="form-control" placeholder="Please enter your phone number." />
-                <label for="phone-number" class="form-label">Phone number</label>
-                <ValidationMessage For="() => Input.PhoneNumber" class="text-danger" />
-            </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Save</button>
+            <!-- Пока нет необходимости в изменении данных <button type="submit" class="w-100 btn btn-lg btn-primary">Save</button> -->
         </EditForm>
     </div>
 </div>
@@ -55,6 +51,8 @@
 
     private async Task OnValidSubmitAsync()
     {
+        /*
+        Пока нет необходимости в изменении данных
         if (Input.PhoneNumber != phoneNumber)
         {
             var setPhoneResult = await UserManager.SetPhoneNumberAsync(user, Input.PhoneNumber);
@@ -66,6 +64,7 @@
 
         await SignInManager.RefreshSignInAsync(user);
         RedirectManager.RedirectToCurrentPageWithStatus("Your profile has been updated", HttpContext);
+        */
     }
 
     private sealed class InputModel
