--- a/Fide/Fide.Blazor/Components/Account/Pages/ConfirmEmail.razor
+++ b/Fide/Fide.Blazor/Components/Account/Pages/ConfirmEmail.razor
@@ -9,9 +9,9 @@
 @inject UserManager<ApplicationUser> UserManager
 @inject IdentityRedirectManager RedirectManager
 
-<PageTitle>Confirm email</PageTitle>
+<PageTitle>Подтверждение почты</PageTitle>
 
-<h1>Confirm email</h1>
+<h1>Подтверждение почты</h1>
 <StatusMessage Message="@statusMessage" />
 
 @code {
@@ -37,13 +37,13 @@
         if (user is null)
         {
             HttpContext.Response.StatusCode = StatusCodes.Status404NotFound;
-            statusMessage = $"Error loading user with ID {UserId}";
+            statusMessage = $"Ошибка загрузки пользователя с ID {UserId}";
         }
         else
         {
             var code = Encoding.UTF8.GetString(WebEncoders.Base64UrlDecode(Code));
             var result = await UserManager.ConfirmEmailAsync(user, code);
-            statusMessage = result.Succeeded ? "Thank you for confirming your email." : "Error confirming your email.";
+            statusMessage = result.Succeeded ? "Ваша почта подтверждена" : "Ошибка подтверждения почты";
         }
     }
 }
