--- a/Fide/Fide.Blazor/Components/Account/Pages/ConfirmEmailChange.razor
+++ b/Fide/Fide.Blazor/Components/Account/Pages/ConfirmEmailChange.razor
@@ -10,9 +10,9 @@
 @inject SignInManager<ApplicationUser> SignInManager
 @inject IdentityRedirectManager RedirectManager
 
-<PageTitle>Confirm email change</PageTitle>
+<PageTitle>Потверждение смены почты</PageTitle>
 
-<h1>Confirm email change</h1>
+<h1>Потверждение смены почты</h1>
 
 <StatusMessage Message="@message" />
 
@@ -36,13 +36,13 @@
         if (UserId is null || Email is null || Code is null)
         {
             RedirectManager.RedirectToWithStatus(
-                "Account/Login", "Error: Invalid email change confirmation link.", HttpContext);
+                "Account/Login", "Ошибка: некорректная ссылка", HttpContext);
         }
 
         var user = await UserManager.FindByIdAsync(UserId);
         if (user is null)
         {
-            message = "Unable to find user with Id '{userId}'";
+            message = "Ошибка загрузки пользователя с Id '{userId}'";
             return;
         }
 
@@ -50,7 +50,7 @@
         var result = await UserManager.ChangeEmailAsync(user, Email, code);
         if (!result.Succeeded)
         {
-            message = "Error changing email.";
+            message = "Ошибка смены почты";
             return;
         }
 
@@ -59,11 +59,11 @@
         var setUserNameResult = await UserManager.SetUserNameAsync(user, Email);
         if (!setUserNameResult.Succeeded)
         {
-            message = "Error changing user name.";
+            message = "Ошибка смены почты";
             return;
         }
 
         await SignInManager.RefreshSignInAsync(user);
-        message = "Thank you for confirming your email change.";
+        message = "Смена почты подтверждена";
     }
 }
