--- a/Fide/Fide.Blazor/Components/Account/Pages/ForgotPasswordConfirmation.razor
+++ b/Fide/Fide.Blazor/Components/Account/Pages/ForgotPasswordConfirmation.razor
@@ -1,8 +1,8 @@
 ﻿@page "/Account/ForgotPasswordConfirmation"
 
-<PageTitle>Forgot password confirmation</PageTitle>
+<PageTitle>Смена пароля</PageTitle>
 
-<h1>Forgot password confirmation</h1>
+<h1>Смена пароля</h1>
 <p>
-    Please check your email to reset your password.
+    На почту было отправлено письмо с подтверждением смены пароля
 </p>
