--- a/Fide/Fide.Blazor/Components/Account/Pages/InvalidPasswordReset.razor
+++ b/Fide/Fide.Blazor/Components/Account/Pages/InvalidPasswordReset.razor
@@ -1,8 +1,8 @@
 ﻿@page "/Account/InvalidPasswordReset"
 
-<PageTitle>Invalid password reset</PageTitle>
+<PageTitle>Некорректная ссылка</PageTitle>
 
-<h1>Invalid password reset</h1>
+<h1>Некорректная ссылка</h1>
 <p>
-    The password reset link is invalid.
+    Ссылка смены пароля некорректная
 </p>
