--- a/Fide/Fide.Blazor/Components/Account/Pages/InvalidUser.razor
+++ b/Fide/Fide.Blazor/Components/Account/Pages/InvalidUser.razor
@@ -1,7 +1,7 @@
 ﻿@page "/Account/InvalidUser"
 
-<PageTitle>Invalid user</PageTitle>
+<PageTitle>Некорректный пользователь</PageTitle>
 
-<h3>Invalid user</h3>
+<h3>Некорректный пользователь</h3>
 
 <StatusMessage />
