--- a/Fide/Fide.Blazor/Components/Account/Pages/Lockout.razor
+++ b/Fide/Fide.Blazor/Components/Account/Pages/Lockout.razor
@@ -1,8 +1,8 @@
 ﻿@page "/Account/Lockout"
 
-<PageTitle>Locked out</PageTitle>
+<PageTitle>Заблокирован</PageTitle>
 
 <header>
-    <h1 class="text-danger">Locked out</h1>
-    <p class="text-danger">This account has been locked out, please try again later.</p>
+    <h1 class="text-danger">Заблокирован</h1>
+    <p class="text-danger">Ваш аккаунт был заблокирован</p>
 </header>
