--- a/Fide/Fide.Blazor/Components/Account/Pages/Manage/SetPassword.razor
+++ b/Fide/Fide.Blazor/Components/Account/Pages/Manage/SetPassword.razor
@@ -1,8 +1,9 @@
 ﻿@page "/Account/Manage/SetPassword"
 
-@    using System.ComponentModel.DataAnnotations
-@    using Microsoft.AspNetCore.Identity
-@    using Fide.Blazor.Data
+@using System.ComponentModel.DataAnnotations
+@using Microsoft.AspNetCore.Identity
+@using Fide.Blazor.Data
+@using Fide.Blazor.Services
 
 @inject UserManager<ApplicationUser> UserManager
 @inject SignInManager<ApplicationUser> SignInManager
