--- a/Fide/Fide.Blazor/Components/Account/Pages/RegisterConfirmation.razor
+++ b/Fide/Fide.Blazor/Components/Account/Pages/RegisterConfirmation.razor
@@ -5,28 +5,28 @@
 @using Microsoft.AspNetCore.WebUtilities
 @using Fide.Blazor.Data
 @using Fide.Blazor.Services
+@using Fide.Blazor.Services.EmailSender
 
 @inject UserManager<ApplicationUser> UserManager
-@inject IEmailSender<ApplicationUser> EmailSender
 @inject NavigationManager NavigationManager
 @inject IdentityRedirectManager RedirectManager
+@inject FideEnvironment Environment
 
-<PageTitle>Register confirmation</PageTitle>
+<PageTitle>Подтверждение почты</PageTitle>
 
-<h1>Register confirmation</h1>
+<h1>Подтверждение почты</h1>
 
 <StatusMessage Message="@statusMessage" />
 
-@if (emailConfirmationLink is not null)
+@if (Environment.IsDebug())
 {
     <p>
-        This app does not currently have a real email sender registered, see <a href="https://aka.ms/aspaccountconf">these docs</a> for how to configure a real email sender.
-        Normally this would be emailed: <a href="@emailConfirmationLink">Click here to confirm your account</a>
+        <a href="@emailConfirmationLink">Ссылка для подтверждения почты на DEBUG сборке</a>
     </p>
 }
 else
 {
-    <p>Please check your email to confirm your account.</p>
+    <p>Проверьте письмо с подтверждением на Вашей почте</p>
 }
 
 @code {
@@ -55,15 +55,15 @@ else
             HttpContext.Response.StatusCode = StatusCodes.Status404NotFound;
             statusMessage = "Error finding user for unspecified email";
         }
-        else if (EmailSender is IdentityNoOpEmailSender)
+        else if (Environment.IsDebug())
         {
-            // Once you add a real email sender, you should remove this code that lets you confirm the account
             var userId = await UserManager.GetUserIdAsync(user);
             var code = await UserManager.GenerateEmailConfirmationTokenAsync(user);
             code = WebEncoders.Base64UrlEncode(Encoding.UTF8.GetBytes(code));
             emailConfirmationLink = NavigationManager.GetUriWithQueryParameters(
                 NavigationManager.ToAbsoluteUri("Account/ConfirmEmail").AbsoluteUri,
-                new Dictionary<string, object?> { ["userId"] = userId, ["code"] = code, ["returnUrl"] = ReturnUrl });
+                new Dictionary<string, object?> { ["userId"] = userId, ["code"] = code, ["returnUrl"] = ReturnUrl }
+            );
         }
     }
 }
