--- a/Fide/Fide.Blazor/Components/Pages/MyImages.razor
+++ b/Fide/Fide.Blazor/Components/Pages/MyImages.razor
@@ -5,7 +5,7 @@
 @using Fide.Blazor.Data;
 @using Fide.Blazor.Services.ImageManager
 @using Fide.Blazor.Services.Repositories.Base
-
+@using Fide.Blazor.Components.Components
 
 @inject AuthenticationStateProvider ContextProvider
 @inject IUserRepository<ApplicationUser> users
@@ -26,21 +26,29 @@ else
     }
     else
     {
-        foreach (var image in User.ImageLinks.Skip(AmountImagesByPage * ImagePage).Take(AmountImagesByPage))
-        {
-            <img src="@image.Url"/>
-        }
+        <Grid Source="RenderImages" @ref="grid">
+            <Image ImageLink="context" />
+        </Grid>
     }
 }
 
 <InputFile OnChange="UploadImages" multiple />
 
+<button @onclick="Left">left</button>
+<button @onclick="Right">right</button>
+<div>Страница @(ImagePage+1)</div>
+<div>@(User.ImageLinks.Count - (AmountImagesByPage * (ImagePage + 1)))</div>
+
 @code {
+    private Grid<ImageLink>? grid;
+
+    private IEnumerable<ImageLink> RenderImages => User.ImageLinks.Skip(AmountImagesByPage * ImagePage).Take(AmountImagesByPage);
+
     private ApplicationUser? User { get; set; }
 
-    private int ImagePage { get; set; } = 1;
+    private int ImagePage { get; set; } = 0;
 
-    private int AmountImagesByPage { get; set; } = 10;
+    private int AmountImagesByPage { get; set; } = 12;
 
     private async void UploadImages(InputFileChangeEventArgs e)
     {
@@ -54,6 +62,24 @@ else
             User.ImageLinks.Add(image);
             users.Update(User);
             users.Save();
+        }
+
+        grid?.Update();
+    }
+
+    private void Left()
+    {
+        if (ImagePage > 0)
+        {
+            ImagePage--;
+        }
+    }
+
+    private void Right()
+    {
+        if (User.ImageLinks.Count - (AmountImagesByPage * (ImagePage + 1)) > 0)
+        {
+            ImagePage++;
         }
     }
 
