--- a/Fide/Fide.Blazor/Components/Components/Grid.razor.css
+++ b/Fide/Fide.Blazor/Components/Components/Grid.razor.css
@@ -1,59 +1,19 @@
-﻿/* Основные стили для Grid контейнера */
-.grid-container {
+﻿.grid-container {
     display: grid;
-    width: 100%;
-    box-sizing: border-box;
-}
-
-/* Стили для Grid элементов с фиксированным размером */
-.grid-item {
-    box-sizing: border-box;
-    width: 100%; /* Занимает всю выделенную ширину */
-    max-width: 100%; /* Гарантирует, что элемент не превысит свою ячейку */
-    overflow: hidden; /* Скрывает содержимое, выходящее за границы */
-}
-
-.grid-columns-1 {
-    grid-template-columns: repeat(1, minmax(0, 1fr));
-}
-
-.grid-columns-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
-}
-
-.grid-columns-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
-}
-
-.grid-columns-4 {
-    grid-template-columns: repeat(4, minmax(0, 1fr));
-}
-
-.grid-columns-5 {
-    grid-template-columns: repeat(5, minmax(0, 1fr));
-}
-
-.grid-columns-6 {
-    grid-template-columns: repeat(6, minmax(0, 1fr));
-}
-
-/* Отступы между элементами */
-.grid-gap-small {
-    gap: 8px;
-}
-
-.grid-gap-medium {
+    grid-auto-rows: 1fr;
     gap: 16px;
 }
 
-.grid-gap-large {
-    gap: 24px;
-}
-
-/* Дополнительные классы для контента внутри элементов */
-.grid-item-content {
-    width: 100%;
-    height: 100%;
+.grid-item {
     display: flex;
     flex-direction: column;
+    height: 100%;
+    min-height: 0; /* Разрешает сжатие */
+    overflow: hidden; /* Если нужно обрезать контент */
+}
+
+.grid-item > * {
+    flex-grow: 1;
+    min-height: 0;
 }
